Add notification profiles and its management operations (#1027)